tools/tests/errors/surf_parse_10.ki
# PARSER: an unmatched '{' - the set/dict brace is never closed
var s = {1, 2, 3